--- a/Solo_Project2/views/join.pug
+++ b/Solo_Project2/views/join.pug
@@ -1,4 +1,11 @@
 extends layouts/main
 
 block content
-    p Join 
+    .form-container
+        form(action=routes.join,method="post")
+            input(type="text",name="name",placeholder="성명")
+            input(type="email",name="email",placeholder="이메일")
+            input(type="password",name="password",placeholder="패스워드")
+            input(type="password",name="password2",placeholder="패스워드 확인")
+            input(type="submit", value="회원가입")
+        include partials/socialLogin
